--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">MoveToShortList</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">56,508</td><td></td><td></td></tr>
+<tr><th colspan="7">AddingProduct</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">42,820</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">MoveToShortList</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.snapdeal.runner.MoveToShortListRunner</td><td><a href="#m0">feature</a></td><td rowspan="1">1589035430416</td><td rowspan="1">55972</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">AddingProduct</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.snapdeal.runner.AddingProductToCartRunner</td><td><a href="#m0">feature</a></td><td rowspan="1">1589200699137</td><td rowspan="1">42386</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">com.snapdeal.runner.MoveToShortListRunner#feature</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Move to ShortList</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">com.snapdeal.runner.AddingProductToCartRunner#feature</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Add To Cart</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
