--- a/test-output/index.html
+++ b/test-output/index.html
@@ -37,8 +37,8 @@
       <div class="suite">
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
-            <a href="#" class="navigator-link" panel-name="suite-MoveToShortList">
-              <span class="suite-name border-passed">MoveToShortList</span>
+            <a href="#" class="navigator-link" panel-name="suite-AddingProduct">
+              <span class="suite-name border-passed">AddingProduct</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -48,37 +48,37 @@
             <div class="suite-section-content">
               <ul>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="test-xml-MoveToShortList">
-                    <span>F:\CapAutomationSelenium\SnapDeal\movetoshortlist.xml</span>
+                  <a href="#" class="navigator-link " panel-name="test-xml-AddingProduct">
+                    <span>E:\javaprojectworkspace\SnapDeal\addingproduct.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="testlist-MoveToShortList">
+                  <a href="#" class="navigator-link " panel-name="testlist-AddingProduct">
                     <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="group-MoveToShortList">
+                  <a href="#" class="navigator-link " panel-name="group-AddingProduct">
                     <span>1 group</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="times-MoveToShortList">
+                  <a href="#" class="navigator-link " panel-name="times-AddingProduct">
                     <span>Times</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="reporter-MoveToShortList">
+                  <a href="#" class="navigator-link " panel-name="reporter-AddingProduct">
                     <span>Reporter output</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="ignored-methods-MoveToShortList">
+                  <a href="#" class="navigator-link " panel-name="ignored-methods-AddingProduct">
                     <span>Ignored methods</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="chronological-MoveToShortList">
+                  <a href="#" class="navigator-link " panel-name="chronological-AddingProduct">
                     <span>Chronological view</span>
                   </a> <!-- navigator-link  -->
                 </li>
@@ -96,16 +96,16 @@
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
                     <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-MoveToShortList" class="hide-methods passed suite-MoveToShortList"> (hide)</a> <!-- hide-methods passed suite-MoveToShortList -->
-                      <a href="#" panel-name="suite-MoveToShortList" class="show-methods passed suite-MoveToShortList"> (show)</a> <!-- show-methods passed suite-MoveToShortList -->
+                      <a href="#" panel-name="suite-AddingProduct" class="hide-methods passed suite-AddingProduct"> (hide)</a> <!-- hide-methods passed suite-AddingProduct -->
+                      <a href="#" panel-name="suite-AddingProduct" class="show-methods passed suite-AddingProduct"> (show)</a> <!-- show-methods passed suite-AddingProduct -->
                     </span>
-                    <div class="method-list-content passed suite-MoveToShortList">
+                    <div class="method-list-content passed suite-AddingProduct">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-MoveToShortList" title="com.snapdeal.runner.MoveToShortListRunner" hash-for-method="feature(Move to ShortList)">feature(Move to ShortList)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-AddingProduct" title="com.snapdeal.runner.AddingProductToCartRunner" hash-for-method="feature(Add To Cart)">feature(Add To Cart)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-MoveToShortList -->
+                    </div> <!-- method-list-content passed suite-AddingProduct -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -116,47 +116,47 @@
     </div> <!-- navigator-root -->
     <div class="wrapper">
       <div class="main-panel-root">
-        <div panel-name="suite-MoveToShortList" class="panel MoveToShortList">
-          <div class="suite-MoveToShortList-class-passed">
+        <div panel-name="suite-AddingProduct" class="panel AddingProduct">
+          <div class="suite-AddingProduct-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.snapdeal.runner.MoveToShortListRunner</span>
+              <span class="class-name">com.snapdeal.runner.AddingProductToCartRunner</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="feature(Move to ShortList)">
-                  </a> <!-- feature(Move to ShortList) -->
+                  <a name="feature(Add To Cart)">
+                  </a> <!-- feature(Add To Cart) -->
                   <span class="method-name">feature</span>
-                  <span class="parameters">(Move to ShortList)</span>
+                  <span class="parameters">(Add To Cart)</span>
                   <em>
 (Runs Cucumber Feature)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-MoveToShortList-class-passed -->
-        </div> <!-- panel MoveToShortList -->
-        <div panel-name="test-xml-MoveToShortList" class="panel">
+          </div> <!-- suite-AddingProduct-class-passed -->
+        </div> <!-- panel AddingProduct -->
+        <div panel-name="test-xml-AddingProduct" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">F:\CapAutomationSelenium\SnapDeal\movetoshortlist.xml</span>
+            <span class="header-content">E:\javaprojectworkspace\SnapDeal\addingproduct.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;MoveToShortList&quot;&gt;
+&lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;AddingProduct&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.snapdeal.runner.MoveToShortListRunner&quot;/&gt;
+      &lt;class name=&quot;com.snapdeal.runner.AddingProductToCartRunner&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
-&lt;/suite&gt; &lt;!-- MoveToShortList --&gt;
+&lt;/suite&gt; &lt;!-- AddingProduct --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="testlist-MoveToShortList" class="panel">
+        <div panel-name="testlist-AddingProduct" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Tests for MoveToShortList</span>
+            <span class="header-content">Tests for AddingProduct</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <ul>
@@ -166,9 +166,9 @@
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="group-MoveToShortList" class="panel">
+        <div panel-name="group-AddingProduct" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Groups for MoveToShortList</span>
+            <span class="header-content">Groups for AddingProduct</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="test-group">
@@ -181,15 +181,15 @@
             </div> <!-- test-group -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="times-MoveToShortList" class="panel">
+        <div panel-name="times-AddingProduct" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Times for MoveToShortList</span>
+            <span class="header-content">Times for AddingProduct</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="times-div">
               <script type="text/javascript">
-suiteTableInitFunctions.push('tableData_MoveToShortList');
-function tableData_MoveToShortList() {
+suiteTableInitFunctions.push('tableData_AddingProduct');
+function tableData_AddingProduct() {
 var data = new google.visualization.DataTable();
 data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
@@ -198,50 +198,50 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'feature')
-data.setCell(0, 2, 'com.snapdeal.runner.MoveToShortListRunner')
-data.setCell(0, 3, 55972);
-window.suiteTableData['MoveToShortList']= { tableData: data, tableDiv: 'times-div-MoveToShortList'}
+data.setCell(0, 2, 'com.snapdeal.runner.AddingProductToCartRunner')
+data.setCell(0, 3, 42386);
+window.suiteTableData['AddingProduct']= { tableData: data, tableDiv: 'times-div-AddingProduct'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 55 seconds</span>
-              <div id="times-div-MoveToShortList">
-              </div> <!-- times-div-MoveToShortList -->
+              <span class="suite-total-time">Total running time: 42 seconds</span>
+              <div id="times-div-AddingProduct">
+              </div> <!-- times-div-AddingProduct -->
             </div> <!-- times-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="reporter-MoveToShortList" class="panel">
+        <div panel-name="reporter-AddingProduct" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Reporter output for MoveToShortList</span>
+            <span class="header-content">Reporter output for AddingProduct</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="ignored-methods-MoveToShortList" class="panel">
+        <div panel-name="ignored-methods-AddingProduct" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="chronological-MoveToShortList" class="panel">
+        <div panel-name="chronological-AddingProduct" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">Methods in chronological order</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.snapdeal.runner.MoveToShortListRunner</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.snapdeal.runner.AddingProductToCartRunner</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUpClass</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">feature(Move to ShortList)</span>
-                <span class="method-start">502 ms</span>
+                <span class="method-name">feature(Add To Cart)</span>
+                <span class="method-start">404 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">56481 ms</span>
+                <span class="method-start">42796 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
